NPM files ready

--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -33,6 +33,7 @@ hr {
 img {
 	height: auto; /* Make sure images are scaled correctly. */
 	max-width: 100%; /* Adhere to container width. */
+	display: block; /* Removes margin under image*/
 }
 
 @import "tables";
