--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -23,3 +23,8 @@ object {
 ## Galleries
 --------------------------------------------------------------*/
 @import "galleries";
+
+/*--------------------------------------------------------------
+## Magnific popup
+--------------------------------------------------------------*/
+@import "../node_modules/magnific-popup/src/css/main.scss";
