--- a/sass/variables-site/_structure.scss
+++ b/sass/variables-site/_structure.scss
@@ -1,2 +1,27 @@
-$size__site-main: 100%;
-$size__site-sidebar: 25%;
+/* ==========================================================================
+Lost variables
+========================================================================== */
+@lost gutter 10px;
+
+/* ==========================================================================
+Screensizes
+========================================================================== */
+$portrait: 	768px;
+$landscape:	1024px;
+$desktop:	1366px;
+$bigscreen:	1440px;
+
+/* ==========================================================================
+Design sizes
+========================================================================== */
+$max-page-width:	1600px;
+$max-inner-width:	1440px;
+
+$mobile-padding: 20px;
+
+/* ==========================================================================
+header
+========================================================================== */
+
+
+
